# sequence-bench

./: .env.example  .gitignore  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/api/: builtin_datasets.py  celery_client.py  config.py  db_migrations.py  json_utils.py  main.py  metrics_registry.py  plots.py
apps/api/api/alembic/: env.py
apps/api/api/alembic/versions/: 001_add_metrics_columns.py  002_add_weight_logs.py  003_add_loss_landscapes.py  004_add_experiment_groups.py  005_drop_primary_metric.py  006_add_early_stopping_metric.py  007_drop_loss_landscape_config.py  008_add_full_weight_trajectory_and_landscape_method.py  009_remove_scalar_weight_variant.py  010_surface_job_cache.py
apps/api/api/models/: __init__.py  database.py  dataset.py  experiment.py  group.py  metrics.py
apps/api/api/routes/: datasets.py  experiments.py  gradients.py  groups.py  monitoring.py  results.py
apps/api/api/tasks/: celery_app.py
apps/api/tests/: test_additional_metrics.py  test_convergence_endpoint.py  test_dataset_registry.py  test_export_clone_status.py  test_surface_cache.py
apps/dashboard/: Dockerfile  index.html  package.json  tsconfig.app.json  vite.config.ts
apps/dashboard/src/: App.tsx  main.tsx  routeTree.gen.ts
apps/dashboard/src/api/: client.ts  datasets.ts  experiments.ts  gradients.ts  groups.ts  results.ts
apps/dashboard/src/components/: ConvergenceChart.tsx  DatasetUpload.tsx  DegradationChart.tsx  EpochTable.tsx  ExperimentTable.tsx  GradientHeatmap.tsx  GradientSection.tsx  LandscapePanel.tsx  LossColorbar.tsx  RawDataSection.tsx  TBPTTSliders.tsx  TrainingMonitor.tsx  TrajectoryPlot.tsx  WeightTrajectory.tsx
apps/dashboard/src/components/analysis/: CompareMode.tsx  GradientCurves.tsx  LearningCurves.tsx  LeftPanel.tsx  MetricsTable.tsx  OverviewMode.tsx  OverviewTable.tsx  ParamHeatmap.tsx  WeightTrajectoryTab.tsx  constants.ts
apps/dashboard/src/components/experiments/: BulkActionBar.tsx  CreateGroupDialog.tsx  DeleteGroupDialog.tsx  DraggableRow.tsx  ExpTableHead.tsx  GroupSection.tsx  HyperParamsForm.tsx  RenameGroupDialog.tsx  UngroupedSection.tsx  WeightTrackSection.tsx  constants.ts
apps/dashboard/src/components/ui/: collapsible.tsx  dialog.tsx  sortable-th.tsx  textarea.tsx
apps/dashboard/src/hooks/: useSSE.ts
apps/dashboard/src/lib/: status.ts  table-utils.ts  viridis.ts
apps/dashboard/src/routes/: __root.tsx  analysis.tsx  compare.tsx  datasets.tsx  index.tsx  results.tsx
apps/dashboard/src/routes/experiments/: $id.tsx  new.tsx
apps/ml-engine/: pyproject.toml
apps/ml-engine/ml_engine/: analysis.py  engine.py  gradient_monitor.py  main.py  model_registry.py  pca.py  utils.py  weight_tracker.py
apps/ml-engine/ml_engine/datasets/: __init__.py  adding_problem.py  base.py  copy_task.py  generic.py  sequential_mnist.py  upload.py
apps/ml-engine/tests/: test_analysis.py  test_datasets.py  test_full_weight_tracker.py  test_gradient_monitor.py  test_integration.py  test_model_registry.py  test_tbptt_engine.py
apps/worker/: Dockerfile  pyproject.toml
apps/worker/tests/: test_pca_landscape.py
apps/worker/worker/: celery_app.py  dataset_registry.py  landscape.py  pca_landscape.py  training.py
