[project]
name = "ml-engine"
version = "0.1.0"
description = "Benchmark ML engine -runs and evaluates sequence models"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.6",
    "torchvision>=0.21",
    "numpy>=1.26",
    "scipy>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ml_engine"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
