[project]
name = "worker"
version = "0.1.0"
description = "Celery training worker for sequence-bench"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.3",
    "redis>=5.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
